k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgoat-deployment
  namespace: webgoat-namespace
  labels:
    app: webgoat
spec:
  serviceAccountName: webgoat-sa
  replicas: 2
  selector:
    matchLabels:
      app: webgoat
  template:
    metadata:
      labels:
        app: webgoat
    spec:
      containers:
      - name: webgoat
        image: aurelter/log8100_tp3:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
