k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webgoat-service
  namespace: webgoat-namespace 
spec:
  selector:
    app: webgoat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
